packages/dart_edge_sql_pglite/lib/src/native/generated_bindings.dart

// ignore_for_file: camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:dart_edge_sql_pglite/dart_edge_sql_pglite.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<
  ffi.Bool Function(
    ffi.Int64,
    ffi.Int64,
    ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int64 handle)>>,
  )
>()
external bool dart_edge_sql_pglite_bind_pool(
  int handle,
  int pool_handle,
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int64 handle)>>
  close_pool,
);

@ffi.Native<ffi.Bool Function(ffi.Int64)>()
external bool dart_edge_sql_pglite_close(int handle);

@ffi.Native<ffi.Bool Function()>()
external bool dart_edge_sql_pglite_close_all();

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void dart_edge_sql_pglite_close_finalizer(
  ffi.Pointer<ffi.Void> handle,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Int64)>()
external ffi.Pointer<ffi.Char> dart_edge_sql_pglite_connection_string(
  int handle,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>(isLeaf: true)
external void dart_edge_sql_pglite_free_string(ffi.Pointer<ffi.Char> value);

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int dart_edge_sql_pglite_native_abi_version();

@ffi.Native<ffi.Int64 Function(ffi.Pointer<ffi.Char>)>()
external int dart_edge_sql_pglite_open_persistent(ffi.Pointer<ffi.Char> path);

@ffi.Native<ffi.Int64 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>()
external int dart_edge_sql_pglite_open_persistent_with_extensions(
  ffi.Pointer<ffi.Char> path,
  ffi.Pointer<ffi.Char> extensions,
);

@ffi.Native<ffi.Int64 Function()>()
external int dart_edge_sql_pglite_open_temporary();

@ffi.Native<ffi.Int64 Function(ffi.Pointer<ffi.Char>)>()
external int dart_edge_sql_pglite_open_temporary_with_extensions(
  ffi.Pointer<ffi.Char> extensions,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> dart_edge_sql_pglite_take_last_error();
